# QVideoWriter

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: FindFFmpeg.cmake
include/: QVideoWriter.h
src/: QVideoWriter.cpp
